grammar.js
    source_file: $ => seq(repeat($._line), optional($.statement), optional($._error_token_forms)),

    _line: $ => choice(seq($.statement, $._line_end), $._line_end),

    // A line ends with a terminator; during error recovery also with a
    // recovery line break, valid only here, in `_try_line` and after the
    // header of a loop, function, TRY, CATCH or directive (`_body_start`),
    // not after an IF header and not inside brackets (ADR-0008).
    _newline: _ => /\r?\n/,

    // BS-LEX-012–014: `'` or whole-word REM, to the end of the line. Declared
    // before `identifier`: for exactly `rem` both tokens match three characters
    // and the earlier token wins (REM mechanism 1, grammar-design §3).
    comment: _ => token(choice(
      /'[^\r\n]*/,
      /[rR][eE][mM]([ \t][^\r\n]*)?/,
    )),

    // BS-STMT-035: a block starts with the terminator that ends its header.
    _assignment_target: $ => choice(
      $.identifier,
      alias($._stmt_member, $.member_expression),
      alias($._stmt_index, $.index_expression),
    ),

    // BS-STMT-001, 002, BS-EXP-020: `=` here is assignment; inside an
    // expression it is comparison.
    assignment_statement: $ => seq(
      field('left', $._assignment_target),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '\\=', '<<=', '>>=')),
      field('right', $.expression),
    ),

    // BS-STMT-003, 004.
    print_statement: $ => seq(choice(kw('print'), '?'), optional($._print_items)),

    // Four-item groups reduce hidden repetition nodes and deletion allocations.
    // Every positive item count is 4k + r, r in 1..4; public items stay unchanged.
    // The error-recovery scanner bounds malformed runs (B4-01, ADR-0008).
    // Items name expression kinds directly, without an `expression` wrapper.
    _print_items: $ => seq(
      repeat(seq($._print_item, $._print_item, $._print_item, $._print_item)),
      choice(
        $._print_item,
        seq($._print_item, $._print_item),
        seq($._print_item, $._print_item, $._print_item),
        seq($._print_item, $._print_item, $._print_item, $._print_item),
      ),
    ),

    _postfix_operand: $ => prec(PREC.POSTFIX, choice(
      $.identifier,
      $.parenthesized_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.attribute_expression,
    )),

    // BS-EXP-002.
    call_expression: $ => choice(
      prec(PREC.POSTFIX, seq(
        field('function', $._callee),
        field('arguments', $.argument_list),
      )),
      // A called member (`a.b(1)`, `a?.b(1)`): the called name and the
      // argument list are siblings, which keeps queries on chains linear (S07-M03).
      prec(PREC.METHOD, seq(
        field('object', choice($._postfix_operand, $.number, $.string)),
        choice('.', '?.'),
        field('property', $.identifier),
        field('arguments', $.argument_list),
      )),
    ),

    _callee: $ => prec(PREC.POSTFIX, choice(
      $.identifier,
      $.parenthesized_expression,
      $.call_expression,
      $.index_expression,
      $.attribute_expression,
    )),

    argument_list: $ => seq(choice(alias($.open_parenthesis, '('), '?('), commaSep($.expression), ')'),

    member_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', choice($._postfix_operand, $.number, $.string)),
      choice('.', '?.'),
      field('property', $.identifier),
    )),

    unary_expression: $ => choice(
      prec(PREC.UNARY, seq(
        field('operator', choice(alias($.minus_sign, '-'), alias($.plus_sign, '+'))),
        field('operand', $.expression),
      )),
      prec(PREC.NOT, seq(field('operator', alias($.not_operator, 'not')), field('operand', $.expression))),
    ),

    // The left operand of `^` as its own rule with POSTFIX precedence: the
    // tree and associativity are unchanged, but error recovery on runs of
    // malformed `^` no longer keeps a deep merged stack whose end-of-input
    // acceptance needs quadratic memory (grammar-design §5).
    _pow_left: $ => prec(PREC.POSTFIX, $.expression),

    // BS-EXP-011, 013-017, 019, 020.
    binary_expression: $ => choice(
      prec.right(PREC.EXPONENT, seq(
        field('left', $._pow_left), field('operator', '^'), field('right', $.expression),
      )),
      ...[
        [PREC.MULTIPLICATIVE, choice('*', '/', kw('mod'), '\\')],
        [PREC.ADDITIVE, choice(alias($.plus_sign, '+'), alias($.minus_sign, '-'))],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.COMPARE, choice('=', '<>', '<', '>', '<=', '>=')],
        [PREC.AND, kw('and')],
        [PREC.OR, kw('or')],
      ].map(([p, operator]) => prec.left(p, seq(
        field('left', $.expression), field('operator', operator), field('right', $.expression),
      ))),
    ),

    // ------------------------------------------------ collections (§9)
    // BS-ARRAY-001-003: line breaks after `[`, between elements (with or
    // without commas) and before `]`; a trailing separator is tolerated.
    associative_array_literal: $ => seq(
      '{',
      repeat($._newline),
      optional(seq(
        $.associative_array_entry,
        repeat(seq($._sep, $.associative_array_entry)),
        optional($._sep),
      )),
      '}',
    ),

    _sep: $ => choice(seq(',', repeat($._newline)), repeat1($._newline)),

    // BS-AA-001, 002, BS-LEX-024: keyword words are identifier keys by
    // context-aware lexing.
    associative_array_entry: $ => seq(
      field('key', choice($.identifier, $.string)),
      ':',
      field('value', $.expression),
    ),

    // ------------------------------------------------- error handling (§10)
    // BS-ERR-001-005: CATCH is required and takes one identifier.
    number: _ => token(choice(
      /(\d+(\.\d+)?|\.\d+)([eEdD][+-]?\d+)?[%!#&]?/,
      /&[hH][0-9a-fA-F]+&?/,
    )),

    // BS-LIT-015-017: one line; `""` is the only escape.
    string: _ => /"([^"\r\n]|"")*"/,

    // BS-LIT-001, 002, 019.
    true: _ => new RegExp(ci('true')),
    false: _ => new RegExp(ci('false')),
    _error_token_forms: $ => seq($._raw_token_marker, choice(
      $.open_parenthesis, $.open_bracket, $.minus_sign, $.plus_sign, $.not_operator, $.try_keyword,
    )),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*[$%!#&]?/,
  },
});
